Fixed hr not visible.

--- a/css/default.css
+++ b/css/default.css
@@ -70,12 +70,13 @@ img {
 }
 
 hr {
-    border: 0;
+    border: 0px;
     height: 1px;
-    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-    background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-    background-image: -ms-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-    background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    width: 100%;
+    background-image: -webkit-linear-gradient(left, rgb(206, 206, 206), rgb(0, 0, 0), rgb(206, 206, 206));
+    background-image: -moz-linear-gradient(left,  rgb(206, 206, 206), rgb(0, 0, 0), rgb(206, 206, 206));
+    background-image: -ms-linear-gradient(left,  rgb(206, 206, 206), rgb(0, 0, 0), rgb(206, 206, 206));
+    background-image: -o-linear-gradient(left, rgb(206, 206, 206), rgb(0, 0, 0), rgb(206, 206, 206));
 }
 
 input {
